--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,8 +5,12 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        <link rel="stylesheet" href="{{ asset("assets/vendor/bootstrap/dist/css/bootstrap.css") }}" type="text/css"/>
+        <script src="{{ asset("assets/vendor/jquery/dist/jquery.js") }}" rel="script" type="application/javascript"></script>
+        <script src="{{ asset("assets/vendor/bootstrap/dist/js/bootstrap.js") }}" rel="script" type="application/javascript"></script>
     </head>
     <body>
+    {% block pagetitle %}{% endblock %}
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
