--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -37,7 +37,7 @@
                     </tr>
                 {% else %}
                     <tr>
-                        <td colspan="4">No Jobs Found</td>
+                        <td colspan="6">No Jobs Found</td>
                     </tr>
                 {% endfor %}
                 </tbody>
@@ -48,6 +48,35 @@
                 </tr>
                 </tfoot>
             </table>
+
+            <table id="recentbuilds" class="table table-striped table-hover table-condensed">
+                <thead>
+                <tr>
+                    <th>Job</th>
+                    <th>Run</th>
+                    <th>Time</th>
+                    <th>Run Time</th>
+                    <th></th>
+                </tr>
+                </thead>
+                <tbody>
+                {{ include("default/recentbuilds.html.twig", { 'builds': builds }) }}
+                </tbody>
+            </table>
         </div>
     </div>
+{% endblock %}
+
+{% block javascripts %}
+    <script type="application/javascript">
+        $(function () {
+            update();
+        });
+        function update() {
+            $.get("{{ path('recentbuilds') }}", function (data) {
+                $("#recentbuilds").find("tbody").html(data);
+                window.setTimeout(update, 10000);
+            });
+        }
+    </script>
 {% endblock %}
