--- a/app/Resources/views/default/builds.html.twig
+++ b/app/Resources/views/default/builds.html.twig
@@ -20,11 +20,11 @@
                 </thead>
                 <tbody>
                 {% for build in builds %}
-                    <tr>
-                        <td>{{ build.id }}</td>
-                        <td>{{ build.time | date }}</td>
-                        <td>{{ build.runTimeInterval | date }}</td>
-                        <td>{{ build.host }}</td>
+                    <tr build-id="{{ build.id }}">
+                        <td class="build-id">{{ build.id }}</td>
+                        <td class="build-time">{{ build.time | date }}</td>
+                        <td class="build-interval">{{ build.runTimeInterval | date }}</td>
+                        <td class="build-host">{{ build.host }}</td>
                         <td><a class="btn btn-default btn-xs" href="{{ path('viewconsole', {'id': build.id, 'job': job.id}) }}"><span
                                         class="glyphicon glyphicon-console"></span></a></td>
                     </tr>
