--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,20 +2,34 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
-        <link rel="stylesheet" href="{{ asset("assets/vendor/bootstrap/dist/css/bootstrap.css") }}" type="text/css"/>
-        <script src="{{ asset("assets/vendor/jquery/dist/jquery.js") }}" rel="script" type="application/javascript"></script>
-        <script src="{{ asset("assets/vendor/bootstrap/dist/js/bootstrap.js") }}" rel="script" type="application/javascript"></script>
+        {% stylesheets 'assets/vendor/bootstrap/dist/css/bootstrap.css'
+        'assets/css/*' filter='cssrewrite' %}
+        <link rel="stylesheet" href="{{ asset_url }}"/>
+        {% endstylesheets %}
+        {% javascripts 'assets/vendor/jquery/dist/jquery.js'
+        'assets/vendor/bootstrap/dist/js/bootstrap.js'
+        'assets/js/*' %}
+        <script src="{{ asset_url }}" rel="script" type="application/javascript"></script>
+        {% endjavascripts %}
     </head>
     <body>
-    <nav>
-        <ol class="breadcrumb">
-            <li><a href="{{ path('homepage') }}">Home</a></li>
-            {% block breadcrums %}{% endblock %}
-        </ol>
-    </nav>
+    {% block navbar %}
+        <nav class="nav navbar navbar-default">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">{{ 'app.name' | trans }}</a>
+                <div class="nav navbar-right navbar-text">
+                    {% include '@FOSUser/Security/navbar.html.twig' %}
+                </div>
+                <ol class="breadcrumb">
+                    <li><a href="{{ path('homepage') }}">{{ 'breadcrumbs.home' | trans }}</a></li>
+                    {% block breadcrums %}{% endblock %}
+                </ol>
+            </div>
+        </nav>
+    {% endblock %}
     <div class="container">
         <div class="container-fluid">
         {% block body %}{% endblock %}
