--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -10,11 +10,11 @@
             <table class="table table-striped table-hover table-condensed jobs-table">
                 <thead>
                 <tr>
-                    <th class="col-sm-3">{{ 'Name' | trans }}</th>
-                    <th class="col-sm-3">{{ 'Schedule' | trans }}</th>
-                    <th class="col-sm-2">{{ 'Last Run' | trans }}</th>
-                    <th class="col-sm-2">{{ 'Next Run' | trans }}</th>
-                    <th class="col-sm-1">{{ 'Run Time' | trans }}</th>
+                    <th class="col-sm-3">{{ 'job.name' | trans }}</th>
+                    <th class="col-sm-3">{{ 'job.schedule.title' | trans }}</th>
+                    <th class="col-sm-2">{{ 'job.last.run.title' | trans }}</th>
+                    <th class="col-sm-2">{{ 'job.last.run.title' | trans }}</th>
+                    <th class="col-sm-1">{{ 'job.run.interval' | trans }}</th>
                     <th class="col-sm-1"></th>
                 </tr>
                 </thead>
@@ -25,7 +25,7 @@
                         <td class="job-schedule">{{ job.cronschedule }}</td>
                         <td class="job-last-run">{% if job.lastRun %}{{ job.lastRun | date }}{% endif %}</td>
                         <td class="job-next-run">{{ job.nextRun | date }}</td>
-                        <td class="job-last-run-interval">{% if job.lastRunTime %}{{ job.lastRunTimeInterval | date }}{% endif %}</td>
+                        <td class="job-last-run-interval">{{ job.lastRunTime | runtime(job.lastRun) }}</td>
                         <td>
                             <a class="btn btn-default btn-xs" href="{{ path('editjob',{'id': job.id}) }}">
                                 <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
@@ -37,7 +37,7 @@
                     </tr>
                 {% else %}
                     <tr>
-                        <td colspan="6">{{ 'No Jobs Found' | trans }}</td>
+                        <td colspan="6">{{ 'jobs.not_found' | trans }}</td>
                     </tr>
                 {% endfor %}
                 </tbody>
@@ -52,12 +52,12 @@
             <table id="recentbuilds" class="table table-striped table-hover table-condensed recent-bulds-table">
                 <thead>
                 <tr>
-                    <th>{{ 'Job' | trans }}</th>
-                    <th>{{ 'Run' | trans }}</th>
-                    <th>{{ 'Host' | trans }}</th>
-                    <th>{{ 'Time' | trans }}</th>
-                    <th>{{ 'Run Time' | trans }}</th>
-                    <th></th>
+                    <th class="col-sm-3">{{ 'job.name' | trans }}</th>
+                    <th class="col-sm-1">{{ 'run.id' | trans }}</th>
+                    <th class="col-sm-3">{{ 'host' | trans }}</th>
+                    <th class="col-sm-2">{{ 'job.run.time' | trans }}</th>
+                    <th class="col-sm-2">{{ 'job.run.interval' | trans }}</th>
+                    <th class="col-sm-1"></th>
                 </tr>
                 </thead>
                 <tbody>
