--- a/app/Resources/views/default/recentbuilds.html.twig
+++ b/app/Resources/views/default/recentbuilds.html.twig
@@ -4,7 +4,7 @@
         <td class="build-id">{{ build.id }}</td>
         <td class="build-host">{{ build.host }}</td>
         <td class="build-time">{{ build.time | date }}</td>
-        <td class="build-runtime">{{ build.runTimeInterval | date }}</td>
+        <td class="build-runtime">{{ build.runTime | runtime(build.time) }}</td>
         <td><a class="btn btn-default btn-xs" href="{{ path('viewconsole', {'id': build.id, 'job': build.job.id}) }}"><span
                         class="glyphicon glyphicon-console"></span></a></td>
     </tr>
